    (Closes: #662846, #664961, #667981)
  * fix a bug in mendex when range ops and macros are used (Closes: #534641)
  * reinstatiate xdvi perl wrapper (Closes: #631271, #583188)
  * pull several bug fixes from upstream svn, in particular fixes for
    luatex (svn 31126, 31313, 31358), dvipdfmx (svn 31303), pdftex (svn 31313),
    dvips (svn 31350, 31547)

 -- Norbert Preining <preining@debian.org>  Mon, 09 Sep 2013 13:53:24 +0900

texlive-bin (2013.20130729.30972-1) unstable; urgency=low

  * update make-orig-tar to use last-changed-rev svn number for
    the last number in the version string
  * switch to system harfbuzz library (Closes: #717962)
    - remove halfbuzz library from source
    - add build dependency on libharfbuzz-dev >= 0.9.18-3
    - adjust debian/rules to build with system-harfbuzz
  * add texinfo to build-deps, somehow timestamps can get screwed
    which means that info files will be rebuild (Closes: #718251)

 -- Norbert Preining <preining@debian.org>  Tue, 30 Jul 2013 14:00:37 +0900

texlive-bin (2013.20130722.31261-1) unstable; urgency=low

  * allow for different origin in make-orig-tar
  * Imported Upstream version 2013.20130722.31261
    - fix for crash of luatex on x32 archs in certain cases
    - update metapost to 1.803
  * ship new pmpost patch for 1.803
  * bump standards version, no changes necessary

 -- Norbert Preining <preining@debian.org>  Fri, 26 Jul 2013 14:39:43 +0900

texlive-bin (2013.20130529.30792-1) unstable; urgency=low

  * remove dependency on ed, seems not needed anymore (Closes: #546938)
  * fix encoding of mendex man page (new b-d on recode) (Closes: #702202)
  * fix strange output in tex.1 (Closes: #663157)
  * upstream fixes (already in earlier TL2013 versions)
    - xdvi now without libt1 (Closes: #668415)
    - xdvi reacts on horizontal scroll events (Closes: #235757, #131338)
    - dvips does not crash on input == output (Closes: #703212)
  * upstream fix to luatex libio
